Made more changes

--- a/views/pages/flashcardAppIndex.ejs
+++ b/views/pages/flashcardAppIndex.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title> Index </title>
-		<link type="text/css" rel="stylesheet" href="flashcardApp.css">
+		<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 		<script >
@@ -21,13 +21,13 @@
 	<body>
 		<header class="headerActivityPage">
 			<div class="nameOfSite">
-				<a class="nameOfSite-a" href="flashcardAppIndex.html"> 
+				<a class="nameOfSite-a" href="flashcardAppIndex.ejs"> 
 					<h1 class="nameOfSite-h1"> Flashcard App </h1>
 				</a>
 			</div>
 			<div class="newSets-navBar">
 				<div class="createNewSet">
-					<a class="createNewSet-a" href="flashcardAppCreateNewSet.html"> 
+					<a class="createNewSet-a" href="flashcardAppCreateNewSet.ejs"> 
 						<button class="dropbtn"> <i class="far fa-plus-square"></i>
 						</button>
 					</a>
