--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -55,7 +55,7 @@
 <body>
 	<header class="headerActivityPage">
 		<div class="nameOfSite">
-			<a class="nameOfSite-a" href="flashcardAppIndex.ejs"> 
+			<a class="nameOfSite-a" href="/flashHome"> 
 				<h1 class="nameOfSite-h1"> Flashcard App </h1>		
 			</a>
 		</div>
