Made changes to href within views DIR

--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -61,7 +61,7 @@
 		</div>
 		<div class="newSets-navBar">
 			<div class="createNewSet">
-				<a class="createNewSet-a" href="flashcardAppCreateNewSet.ejs"> 
+				<a class="createNewSet-a" href="/flashCreate"> 
 					<button class="dropbtn"> <i class="far fa-plus-square"></i>
 					</button>
 				</a>
