--- a/views/pages/flashcardAppIndex.ejs
+++ b/views/pages/flashcardAppIndex.ejs
@@ -21,13 +21,13 @@
 	<body>
 		<header class="headerActivityPage">
 			<div class="nameOfSite">
-				<a class="nameOfSite-a" href="flashcardAppIndex.ejs"> 
+				<a class="nameOfSite-a" href="/flashHome"> 
 					<h1 class="nameOfSite-h1"> Flashcard App </h1>
 				</a>
 			</div>
 			<div class="newSets-navBar">
 				<div class="createNewSet">
-					<a class="createNewSet-a" href="flashcardAppCreateNewSet.ejs"> 
+					<a class="createNewSet-a" href="/flashCreate"> 
 						<button class="dropbtn"> <i class="far fa-plus-square"></i>
 						</button>
 					</a>
