--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -4,7 +4,9 @@
 	<title> Create New Set </title>
 	<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-	<script src="flashcardCreateNewSet.js" async> </script>
+	<script type="module" src="flashcardCreateNewSet.js" async> </script>
+	<script type="module" src="sampleData.js" async> </script>
+
 	</head>
 <body>
 	<header class="headerActivityPage">
