--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -41,21 +41,25 @@
 		</div>		
 	</div> 
 	<div class="container-2" id="container-2">
+		<form action="" method="post">
 			<div class="newCard" id="newCard">
 				<div class="Term-Definition">
 					<div class="Term">
-						<input class="newCard-Term" type="text" placeholder="Term"/>
+						<input class="newCard-Term" type="text" name="term-0" placeholder="Term"/>
 						<h3 class="Term-h3"> Term </h3>
 					</div>
 					<div class="Definition">
-						<input class="newCard-Definition" type="text" placeholder="Definition"/>
+						<input class="newCard-Definition" type="text" name="definition-0" placeholder="Definition"/>
 						<h3 class="Definition-h3"> Definition </h3>
 					</div>
 				</div>
 			</div>
-		
-		<div class="addNewCard">
-			<h3 class="addCardButton" id="addCardButton"> Add a card </h3>
-		</div>
+			<div class="addNewCard">
+				<h3 class="addCardButton" id="addCardButton"> Add a card </h3>
+			</div>
+			<div class="sendButton">
+				<button type="submit"> Complete your set </button>
+			</div>
+		</form>
 	</div>
 </body>
