--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -58,7 +58,7 @@
 				<h3 class="addCardButton" id="addCardButton"> Add a card </h3>
 			</div>
 			<div class="sendButton">
-				<button type="submit"> Complete your set </button>
+				<button id="sendButton" type="submit"> Complete your set </button>
 			</div>
 		</form>
 	</div>
