--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -205,11 +205,17 @@ input[type="text"].newSetName-Input::placeholder {
 }
 
 .addNewCard {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	display: block;
+	text-align: center;
 	width: 85%;
 	margin: 5px;
+	background-color: white;
+	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+}
+
+#sendButton {
+	width: 100px;
+	margin: 20px;
 	background-color: white;
 	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
