--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -159,7 +159,11 @@ input[type="text"].newSetName-Input::placeholder {
 }
 
 .flashForm {
-	width: 85%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #F7F8F8;
+	width: 100%;
 }
 
 .newCard {
