--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -40,8 +40,7 @@
 			</div>
 		</div>		
 	</div> 
-	<div class="container-2" id="container-2">
-		 
+		<form class="flashForm" action="" method="post">
 			<div class="newCard" id="newCard">
 				<div class="Term-Definition">
 					<div class="Term">
@@ -60,6 +59,5 @@
 			<div class="sendButton">
 				<button id="sendButton" type="submit"> Complete your set </button>
 			</div>
-		
-	</div>
+		</form>
 </body>
