--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -218,12 +218,13 @@ input[type="text"].newSetName-Input::placeholder {
 }
 
 .addCardButton {
-	padding: 20px;
+	padding: 5px;
 }
 
 #sendButton {
 	width: 100px;
 	margin: 20px;
+	border: 0;
 	background-color: white;
 	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
