--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -41,7 +41,7 @@
 		</div>		
 	</div> 
 	<div class="container-flashCreate-2">
-		<form class="flashForm" action="" method="post">
+		<form class="flashForm" id="flashForm" action="" method="post">
 			<div class="newCard" id="newCard">
 				<div class="Term-Definition">
 					<div class="Term">
