--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -243,6 +243,7 @@ input[type="text"].newSetName-Input::placeholder {
 	border: 0;
 	background-color: white;
 	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+	text-align: center;
 	
 }
 
