--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<script type="module" src="flashcardCreateNewSet.js" async> </script>
 	<script type="module" src="sampleData.js" async> </script>
+	<script type="module" src="ajaxDoc.js" async> </script>
 
 	</head>
 <body>
@@ -45,11 +46,11 @@
 			<div class="newCard" id="newCard">
 				<div class="Term-Definition">
 					<div class="Term">
-						<input class="newCard-Term" type="text" name="term" placeholder="Term"/>
+						<input class="newCard-Term" type="text" name="term-0" placeholder="Term"/>
 						<h3 class="Term-h3"> Term </h3>
 					</div>
 					<div class="Definition">
-						<input class="newCard-Definition" type="text" name="definition" placeholder="Definition"/>
+						<input class="newCard-Definition" type="text" name="definition-0" placeholder="Definition"/>
 						<h3 class="Definition-h3"> Definition </h3>
 					</div>
 				</div>
