--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -42,15 +42,15 @@
 		</div>		
 	</div> 
 	<div class="container-flashCreate-2">
-		<form class="flashForm" id="flashForm" action="" method="post">
+		<form class="flashForm" id="flashForm">
 			<div class="newCard" id="newCard">
 				<div class="Term-Definition">
 					<div class="Term">
-						<input class="newCard-Term" type="text" name="term-0" placeholder="Term"/>
+						<input class="newCard-Term" type="text" name="data-0" placeholder="Term"/>
 						<h3 class="Term-h3"> Term </h3>
 					</div>
 					<div class="Definition">
-						<input class="newCard-Definition" type="text" name="definition-0" placeholder="Definition"/>
+						<input class="newCard-Definition" type="text" name="data-0" placeholder="Definition"/>
 						<h3 class="Definition-h3"> Definition </h3>
 					</div>
 				</div>
