--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -42,7 +42,7 @@
 		</div>		
 	</div> 
 	<div class="container-flashCreate-2">
-		<form class="flashForm" id="flashForm">
+		<form class="flashForm" id="flashForm" method="POST">
 			<div class="newCard" id="newCard">
 				<div class="Term-Definition">
 					<div class="Term">
