--- a/views/pages/flashcardAppCreateNewSet-success.ejs
+++ b/views/pages/flashcardAppCreateNewSet-success.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<title> Create New Set </title>
+	<title> Sucess Page With Data </title>
 	<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<script type="module" src="flashcardCreateNewSet.js" async> </script>
@@ -32,6 +32,16 @@
 		</div>
 	</header>	
 	<div class="container-1">
+		<table>
+			<% for(let i = 0; i < data.length; i++) { %>
+			<% let propTerm = "term-" + i; %>
+			<% let propDef = "definition-" + i; %> 
+				<tr>
+					<td> <%= data[i].propTerm %> </td>
+					<td> <%= data[i].propDef %> </td>
+				</tr>
+			<% } %>
+		</table>
 		<div class="createNewSet-outer">
 			<div class="createNewSets-Div">
 				<h2 class="createNewSetsDiv-h2"> Create your new set  </h2>
