--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -36,13 +36,13 @@
 			<div class="createNewSets-Div">
 				<h2 class="createNewSetsDiv-h2"> Create your new set  </h2>
 				<div class="newSetName-inDiv">
-					<input class="newSetName-Input" type="text" placeholder="Write it's name here"/>
+					<input form="flashForm" class="newSetName-Input" type="text" name="setName" placeholder="Write it's name here"/>
 				</div>
 			</div>
 		</div>		
 	</div> 
 	<div class="container-flashCreate-2">
-		<form class="flashForm" id="flashForm" method="POST" action="/flashCreate">
+		<form class="flashForm" id="flashForm" method="POST" action="/flashCreate-success">
 			<div class="newCard" id="newCard">
 				<div class="Term-Definition">
 					<div class="Term">
