--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -58,7 +58,7 @@
 			<input type="submit" id="submit-form" class="hidden" />
 		</form>
 		<div class="addNewCard">
-			<h3 class="addCardButton" id="addCardButton"> Add a card </h3>
+			<button class="addCardButton" id="addCardButton"> Add a card </button>
 		</div>
 		<div class="sendButton">
 				<label for="submit-form" tabindex="0" id="sendButton"> Complete your set </label>
