card display updates

--- a/views/pages/flashcardAppCreateNewSet-success.ejs
+++ b/views/pages/flashcardAppCreateNewSet-success.ejs
@@ -45,9 +45,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="cardButtons">
-				<button class="previousButton"> </button>
-				<button class="nextButton"> </button>
+		<div id="cardButtons" class="cardButtons">
+				<button id="previousButton" class="previousButton"> </button>
+				<button id="nextButton" class="nextButton"> </button>
 		</div>
 	</div> 
 </body>
