--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<title> Create New Set </title>
-	<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-	<script type="module" src="flashcardCreateNewSet.js" async> </script>
-	<script type="module" src="sampleData.js" async> </script>
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<title> Create New Set </title>
+		<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+		<script type="module" src="flashcardCreateNewSet.js" async> </script>
+		<script type="module" src="sampleData.js" async> </script>
 	<!-- <script type="module" src="ajaxDoc.js" async> </script> -->
-
-</head>
-<body>
-	<header class="headerActivityPage">
-		<div class="nameOfSite">
-			<a class="nameOfSite-a" href="/flashHome"> 
-				<h1 class="nameOfSite-h1"> Flashcard App </h1>		
-			</a>
-		</div>
-		<div class="newSets-navBar">
-			<div class="createNewSet">
-				<a class="createNewSet-a" href="/flashCreate"> 
-					<button class="dropbtn"> <i class="far fa-plus-square"></i>
-					</button>
+	</head>
+	<body>
+		<header class="headerActivityPage">
+			<div class="nameOfSite">
+				<a class="nameOfSite-a" href="/flashHome"> 
+					<h1 class="nameOfSite-h1"> Flashcard App </h1>		
 				</a>
 			</div>
-			<div class="sideNavBar">
-				<a class="sideNavBar-a" href="">
-					<button class="dropbtn"> <i class="fas fa-bars"></i> 
-					</button>
-				</a>
-			</div>
-		</div>
-	</header>	
-	<div class="container-1">
-		<div class="createNewSet-outer">
-			<div class="createNewSets-Div">
-				<h2 class="createNewSetsDiv-h2"> Create your new set  </h2>
-				<div class="newSetName-inDiv">
-					<input form="flashForm" class="newSetName-Input" type="text" name="setName" placeholder="Write it's name here"/>
+			<div class="newSets-navBar">
+				<div class="createNewSet">
+					<a class="createNewSet-a" href="/flashCreate"> 
+						<button class="dropbtn"> <i class="far fa-plus-square"></i>
+						</button>
+					</a>
+				</div>
+				<div class="sideNavBar">
+					<a class="sideNavBar-a" href="">
+						<button class="dropbtn"> <i class="fas fa-bars"></i> 
+						</button>
+					</a>
 				</div>
 			</div>
-		</div>		
-	</div> 
-	<div class="container-flashCreate-2">
-		<form class="flashForm" id="flashForm" method="POST" action="/flashCreate">
-			<div class="newCard" id="newCard">
-				<div class="Term-Definition">
-					<div class="Term">
-						<input class="newCard-Term" type="text" name="term0" placeholder="Term"/>
-						<h3 class="Term-h3"> Term </h3>
-					</div>
-					<div class="Definition">
-						<input class="newCard-Definition" type="text" name="definition0" placeholder="Definition"/>
-						<h3 class="Definition-h3"> Definition </h3>
+		</header>	
+		<div class="container-1">
+			<div class="createNewSet-outer">
+				<div class="createNewSets-Div">
+					<h2 class="createNewSetsDiv-h2"> Create your new set  </h2>
+					<div class="newSetName-inDiv">
+						<input form="flashForm" class="newSetName-Input" type="text" name="setName" placeholder="Write it's name here"/>
 					</div>
 				</div>
+			</div>		
+		</div> 
+		<div class="container-flashCreate-2">
+			<form class="flashForm" id="flashForm" method="POST" action="/flashCreate">
+				<div class="newCard" id="newCard">
+					<div class="Term-Definition">
+						<div class="Term">
+							<input class="newCard-Term" type="text" name="term0" placeholder="Term"/>
+							<h3 class="Term-h3"> Term </h3>
+						</div>
+						<div class="Definition">
+							<input class="newCard-Definition" type="text" name="definition0" placeholder="Definition"/>
+							<h3 class="Definition-h3"> Definition </h3>
+						</div>
+					</div>
+				</div>
+				<input type="submit" id="submit-form" class="hidden" />
+			</form>
+			<div class="addNewCard">
+				<button class="addCardButton" id="addCardButton"> Add a card </button>
 			</div>
-			<input type="submit" id="submit-form" class="hidden" />
-		</form>
-		<div class="addNewCard">
-			<button class="addCardButton" id="addCardButton"> Add a card </button>
+			<div class="sendButton">
+					<label for="submit-form" tabindex="0" id="sendButton"> Complete your set </label>
+			</div>
 		</div>
-		<div class="sendButton">
-				<label for="submit-form" tabindex="0" id="sendButton"> Complete your set </label>
-		</div>
-	</div>
-</body>
+	</body>
+</html>
