front-end home.ejs changes

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<head>
+<html>
+	<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title> Create New Set </title>
 	<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
@@ -9,25 +10,72 @@
 	<!-- <script type="module" src="ajaxDoc.js" async> </script> -->
 </head>
 <body>
-	<header class="headerActivityPage">
-		<div class="nameOfSite">
-			<a class="nameOfSite-a" href="/flashHome"> 
-				<h1 class="nameOfSite-h1"> Flashcard App </h1>		
-			</a>
+	<div class="home-container">
+		<div class="inner-container">
+			<div class="keyline-home-0"></div>
+			<header class="headerActivityPage-home">
+				<div class="nameOfSite">
+					<a class="nameOfSite-a" href="/flashHome"> 
+						<h1 class="nameOfSite-h1"> FlashPass </h1>
+					</a>
+				</div>
+				<div class="newSets-navBar">
+					<div class="login-signUp">
+						<a class="login-a" href="">
+							<h3 class="inner-login">
+								Login
+							</h3>
+						</a>
+						<a class="signUp-a" href="">
+							<h3 class="inner-signUp">
+								Sign up
+							</h3>
+						</a>
+					</div>
+				</div>
+			</header>
+			<div class="keyline-home-1"></div>	
+			<img class="first-img" src="/images/IMG_0945.jpg" alt="Tam background with cargo ship"/>
+			<div class="home-img-div">
+				<h2 class="home-img-text">
+					Effortless UI design <br> granting learners a peaceful approach to studying.
+				</h2>
+				<div class="home-img-separator">
+				</div>
+				<h3 class="home-img-text2">
+					Generate flashcard sets of your own accord <br> or discover heplful sets from others.
+				</h3>
+			</div>	
 		</div>
-		<div class="newSets-navBar">
-			<div class="createNewSet">
-				<a class="createNewSet-a" href="/flashCreate"> 
-					<button class="dropbtn"> <i class="far fa-plus-square"></i>
-					</button>
-				</a>
+		<div class="inner-container">
+			<img class="second-img" src="/images/IMG_0121.jpg" alt="SF Pink Flower"/>
+			<div class="home-logOn-explain-div">
+				<h3 class="home-logOn-register">
+					Using the built-in study interface of FlashPass, studying is made easy.
+				</h3>
 			</div>
-			<div class="sideNavBar">
-				<a class="sideNavBar-a" href="">
-					<button class="dropbtn"> <i class="fas fa-bars"></i> 
-					</button>
-				</a>
+			<div class="home-logOn-div">
+				<h3 class="home-logOn-register">
+					As an example, <br> observe how a new card <br> may be created within a set:
+				</h3>
 			</div>
 		</div>
-	</header>	
+		<div class="inner-container">
+			<img class="third-img" src="/images/IMG_0832 (1).jpg" alt="SF dark to light"/>
+		</div>
+	</div>
 </body>
+</html>
+
+<!-- 
+<div class="home-logOn-explain-div">
+				<h3 class="home-logOn-register">
+					The built-in study interface of FlashPass <br> engages the brain effectively <br> through the facilitation of repetition.
+				</h3>
+			</div>
+			<div class="home-logOn-div">
+				<h3 class="home-logOn-register">
+					Use repetition to your advantage <br> as it trains our metacognitive ability to ask questions that aid in our ability to reason <br> and think critically.
+				</h3>
+			</div>
+		-->
