--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css?family=Montserrat|Righteous|Maven+Pro');
+ @import url('https://fonts.googleapis.com/css?family=Montserrat|Righteous|Maven+Pro|Abel|Aleo|Open+Sans+Condensed:300|Oswald|Thasadith');
 
 body {
 	margin: 0px;
@@ -355,6 +355,178 @@ input[type="text"].newSetName-Input::placeholder {
 	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 	cursor: pointer;
 }
+
+/* CSS for home.ejs */
+
+.headerActivityPage-home {
+	display: flex;
+	position: fixed;
+	flex-direction: row;
+	align-items: flex-end;
+	align-content: center;
+	width: 100%;
+	height: 50px;
+}
+
+.keyline-home-0, .keyline-home-1 {
+	position: fixed;
+	width: 95%;
+	height: 1px;
+}
+
+.keyline-home-0 {
+	background-color: white;
+	margin-top: 5px;
+}
+
+.keyline-home-1 {
+	background-color: white;
+	margin-top: 45px;
+}
+
+.login-signUp {
+
+}
+
+.login-a, .signUp-a {
+	display: inline-block;	
+}
+
+
+.inner-login {
+	/*background-color: #E00F47;*/
+	background-color: transparent;
+	color: white;
+	font-size: 12px;
+	width: 70px;
+	height: 20px;
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.inner-signUp {
+	background-color: transparent;
+	color: white;
+	font-size: 12px;
+	width: 70px;
+	height: 20px;
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	border: solid white 1px;
+	padding-top: 3px;
+}
+
+.home-container {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: center;
+	background-color: lightgrey;
+	width: 100%;
+	/*background-color: #86ACDE;*/
+}
+
+.inner-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+a {
+	text-decoration: none;
+	color: white;
+}
+
+.first-img {
+	max-width: 100%;
+	height: auto;
+	object-fit: cover;
+	border-bottom: solid white 5px;
+}
+
+.home-img-div {
+	width: 90%;
+	margin-top: -180px;
+}
+
+.home-img-text {
+	font-family: 'Montserrat', sans-serif;
+	text-align: center;
+	font-size: 18px;
+	color: white;
+
+	/*color: #3E3E3E;*/
+}
+
+.home-img-separator {
+	background-color: #E00F47;
+	width: 90px;
+	height: 4px;
+	margin: 0 auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.home-img-text2 {
+	font-family: 'Thasadith', sans-serif;
+	text-align: center;
+	font-size: 14px;
+	color: white;
+}
+
+.second-img {
+	margin-top: 5px;
+	max-width: 100%;
+	height: auto;
+	object-fit: cover;
+	border-bottom: solid white 5px;
+}
+
+.home-logOn-explain-div {
+	width: 75%;
+	height: 100px;
+	margin-top: -200px;
+	border-radius: 2px;
+}
+
+.home-logOn-register {
+	font-size: 14px;
+	font-family: 'Thasadith', sans-serif;
+	color: white;
+	text-align: center;
+}
+
+.home-logOn-div {
+	width: 75%;
+	height: 100px;
+	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+	margin-top: 0px;
+	border: solid white 1px;
+	border-radius: 2px;
+	background-color: #D6D0D0;
+}
+
+.home-logOn-div h3 {
+	font-size: 16px;
+	font-family: 'Montserrat', sans-serif;
+	margin-bottom: 30px;
+	color: #2F2F2F;
+}
+
+
+.third-img {
+	margin-top: 5px;
+	max-width: 100%;
+	height: auto;
+	object-fit: cover;
+	border-bottom: solid white 5px;
+}
+
+
+
+
+
+
 
 
 
