home.ejs changes

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -35,7 +35,7 @@
 				</div>
 			</header>
 			<div class="keyline-home-1"></div>	
-			<img class="first-img" src="/images/IMG_0945.jpg" alt="Tam background with cargo ship"/>
+			<img class="first-img" src="/images/IMG_0945.JPG" alt="Tam background with cargo ship"/>
 			<div class="home-img-div">
 				<h2 class="home-img-text">
 					Effortless UI design <br> granting learners a peaceful approach to studying.
@@ -48,7 +48,7 @@
 			</div>	
 		</div>
 		<div class="inner-container">
-			<img class="second-img" src="/images/IMG_0121.jpg" alt="SF Pink Flower"/>
+			<img class="second-img" src="/images/IMG_0121.JPG" alt="SF Pink Flower"/>
 			<div class="home-logOn-explain-div">
 				<h3 class="home-logOn-register">
 					Using the built-in study interface of FlashPass, studying is made easy.
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 		<div class="inner-container">
-			<img class="third-img" src="/images/IMG_0832 (1).jpg" alt="SF dark to light"/>
+			<img class="third-img" src="/images/IMG_0832 (1).JPG" alt="SF dark to light"/>
 		</div>
 	</div>
 </body>
