--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -9,7 +9,6 @@ body {
 	display: flex;
 	justify-content: flex-end;
 	width: 100%;
-	opacity: 0.8;
 
 }
 
@@ -366,12 +365,14 @@ input[type="text"].newSetName-Input::placeholder {
 	align-content: center;
 	width: 100%;
 	height: 50px;
+	z-index: 20;
 }
 
 .keyline-home-0, .keyline-home-1 {
 	position: fixed;
 	width: 95%;
 	height: 1px;
+	z-index: 20;
 }
 
 .keyline-home-0 {
@@ -421,15 +422,38 @@ input[type="text"].newSetName-Input::placeholder {
 	flex-direction: column;
 	flex-wrap: nowrap;
 	align-items: center;
-	background-color: lightgrey;
+	background-color: #D6CCCC;
 	width: 100%;
 	/*background-color: #86ACDE;*/
 }
 
-.inner-container {
+.inner-container-0 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	width: 100%;
+	margin: 0px;
+}
+
+
+.inner-container-1 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	height: auto;
+	margin: 0px;
+	position: relative;
+	z-index: 1;
+}
+
+
+.inner-container-2 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	margin: 0px;
 }
 
 a {
@@ -445,7 +469,7 @@ a {
 }
 
 .home-img-div {
-	width: 90%;
+	width: 75%;
 	margin-top: -180px;
 }
 
@@ -454,6 +478,7 @@ a {
 	text-align: center;
 	font-size: 18px;
 	color: white;
+	white-space: nowrap;
 
 	/*color: #3E3E3E;*/
 }
@@ -478,15 +503,19 @@ a {
 	margin-top: 5px;
 	max-width: 100%;
 	height: auto;
-	object-fit: cover;
 	border-bottom: solid white 5px;
+	object-fit: cover;
 }
 
 .home-logOn-explain-div {
 	width: 75%;
 	height: 100px;
-	margin-top: -200px;
 	border-radius: 2px;
+	margin: 70px auto;
+	display: block;
+	position: absolute;
+	left: 50%;
+	transform: translateY(-50%) translateX(-50%);
 }
 
 .home-logOn-register {
@@ -494,32 +523,251 @@ a {
 	font-family: 'Thasadith', sans-serif;
 	color: white;
 	text-align: center;
+	white-space: nowrap;
+}
+
+.home-logOn-explain-div-1 {
+	width: 75%;
+	height: 80px;
+	border-radius: 2px;
+	margin: 160px auto;
+	display: block;
+	position: absolute;
+	left: 50%;
+	transform: translateY(-50%) translateX(-50%);
+	border: solid white 1px;
+	background: rgba(204, 204, 204, 0.3);
+}
+
+.home-logOn-explain-1 {
+	font-size: 13px;
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+	text-align: center;
+	white-space: nowrap;
 }
 
 .home-logOn-div {
+	background-color: #E00F47;
 	width: 75%;
-	height: 100px;
+	height: 80px;
 	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 	margin-top: 0px;
 	border: solid white 1px;
 	border-radius: 2px;
-	background-color: #D6D0D0;
+	z-index: 10;
+	display: block;
+	position: absolute;
+	left: 50%;
+	transform: translateY(-50%) translateX(-50%);
+	/*background: rgba(204, 204, 204, 0.3);*/
 }
 
 .home-logOn-div h3 {
-	font-size: 16px;
+	font-size: 14px;
 	font-family: 'Montserrat', sans-serif;
 	margin-bottom: 30px;
-	color: #2F2F2F;
+	/*color: #2F2F2F;*/
+	color: white;
 }
 
-
 .third-img {
-	margin-top: 5px;
 	max-width: 100%;
 	height: auto;
 	object-fit: cover;
 	border-bottom: solid white 5px;
+}
+
+.home-term-explain-div-1 {
+	width: 75%;
+	height: 80px;
+	border-radius: 2px;
+	margin-top: 100px;
+	margin-bottom: 5px;
+	display: block;
+	background: rgba(204, 204, 204, 0.3);
+}
+
+.newCard-home {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: center;
+	width: 85%;
+	margin: 10px 20px 10px 20px;
+	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+	border: solid white 1px;
+}
+
+.Term-Definition-home {
+	
+}
+
+.Term-home {
+	display: inline-flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	margin: 15px;
+}
+
+.newCard-Term-home {
+	display: block;
+	border: 0;
+	border-bottom: solid white 2px;
+	font-family: 'Montserrat', sans-serif;
+	background-color: transparent;
+}
+
+input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-Definition-home::placeholder {
+	color: white;
+}
+
+.Term-h3-home {
+	display: block;
+	font-size: 14px;
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+}
+
+.Definition-home {
+	display: inline-flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	margin: 15px;
+}
+
+.newCard-Definition-home {
+	display: block;
+	border: 0;
+	border-bottom: solid white 2px;
+	font-family: 'Montserrat', sans-serif;
+	background-color: transparent;
+}
+
+.Definition-h3-home {
+	display: block;
+	font-size: 14px;
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+}
+
+/* Flip CSS for card on home.ejs, slightly different than on success page */
+.flip-container-home {
+	perspective: 1000px;
+	background-color: transparent;
+	margin: 10px;
+	cursor: pointer;
+}
+	/* flip the pane when hovered
+
+		1. INCLUDE THIS IF I WANT THE CARD TO FLIP 
+		   WHEN HOVERED: .flip-container:hover .flipper, 
+
+	*/
+	.flip-container-home.hover .flipper-home, .flip-container-home.flip .flipper-home {
+		transform: rotateY(180deg);
+	}
+
+.flip-container-home, .front-home, .back-home {
+	width: 350px;
+	height: 300px;
+}
+
+/* flip speed goes here */
+.flipper-home {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front-home, .back-home {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front-home {
+	border: solid white 1px;
+	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back-home {
+	border: solid white 1px;
+	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+	transform: rotateY(180deg);
+}
+
+.frontCard-home, .backCard-home {
+	color: white;
+	text-align: center;
+	font-size: 24px;
+	margin-top: 100px;
+}
+
+.cardButtons-home {
+	width: 75%;
+	text-align: center;
+}
+
+.previousButton-home, .nextButton-home {
+	background-color: transparent;
+	margin: 0 20px 30px 20px;
+	padding: 20px;
+	border: 0;
+	width: 15px;
+	height: 15px;
+	cursor: pointer;
+	color: white;
+	font-size: 35px;
+	text-align: center;
+}
+
+.fas {
+	padding-right: 10px;
+}
+
+.sendButton-home {
+	display: flex;
+	width: 85%;
+	text-align: center;
+}
+
+#sendButton-home {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 12px;
+	color: white;
+	padding: 10px;
+	text-align: center;
+	cursor: pointer;
+	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+	border: solid white 1px;
+	margin-left: auto;
+}
+
+
+/* MEDIA QUERIES */
+
+/* iPhone resolution or less */
+@media only screen and (max-device-width: 480px) {
+
+.Term-home {
+	width: 39%;
+	margin-right: 21px;
+}
+
+.Definition-home {
+	width: 39%;
+}
+	
 }
 
 
